test/parser/break_continue.0.stderr
<source>:4:5: error: 'break' outside of a loop
    4 |     break;
      |     ~~~~~
<source>:6:5: error: 'continue' outside of a loop
    6 |     continue;
      |     ~~~~~~~~
<source>:10:9: error: 'break' outside of a loop
   10 |         break;
      |         ~~~~~
<source>:12:9: error: 'continue' outside of a loop
   12 |         continue;
      |         ~~~~~~~~
<source>:17:9: error: 'break' outside of a loop
   17 |         break;
      |         ~~~~~
<source>:19:9: error: 'continue' outside of a loop
   19 |         continue;
      |         ~~~~~~~~
